@@ -60,106 +60,6 @@
 
 
 
-
-(defmacro with-movement (&body body)
-  `(when (frame-p *current-child*)
-     ,@body
-     (show-all-children)
-     (draw-second-mode-window)
-     (open-menu (find-menu 'frame-movement-menu))))
-
-
-;;; Pack
-(defun current-frame-pack-up ()
-  "Pack the current frame up"
-  (with-movement (pack-frame-up *current-child* (find-father-frame *current-child* *current-root*))))
-
-(defun current-frame-pack-down ()
-  "Pack the current frame down"
-  (with-movement (pack-frame-down *current-child* (find-father-frame *current-child* *current-root*))))
-
-(defun current-frame-pack-left ()
-  "Pack the current frame left"
-  (with-movement (pack-frame-left *current-child* (find-father-frame *current-child* *current-root*))))
-
-(defun current-frame-pack-right ()
-  "Pack the current frame right"
-  (with-movement (pack-frame-right *current-child* (find-father-frame *current-child* *current-root*))))
-
-;;; Center
-(defun center-current-frame ()
-  "Center the current frame"
-  (with-movement (center-frame *current-child*)))
-
-;;; Fill
-(defun current-frame-fill-up ()
-  "Fill the current frame up"
-  (with-movement (fill-frame-up *current-child* (find-father-frame *current-child* *current-root*))))
-
-(defun current-frame-fill-down ()
-  "Fill the current frame down"
-  (with-movement (fill-frame-down *current-child* (find-father-frame *current-child* *current-root*))))
-
-(defun current-frame-fill-left ()
-  "Fill the current frame left"
-  (with-movement (fill-frame-left *current-child* (find-father-frame *current-child* *current-root*))))
-
-(defun current-frame-fill-right ()
-  "Fill the current frame right"
-  (with-movement (fill-frame-right *current-child* (find-father-frame *current-child* *current-root*))))
-
-(defun current-frame-fill-all-dir ()
-  "Fill the current frame in all directions"
-  (with-movement
-    (let ((father (find-father-frame *current-child* *current-root*)))
-      (fill-frame-up *current-child* father)
-      (fill-frame-down *current-child* father)
-      (fill-frame-left *current-child* father)
-      (fill-frame-right *current-child* father))))
-
-(defun current-frame-fill-vertical ()
-  "Fill the current frame vertically"
-  (with-movement
-    (let ((father (find-father-frame *current-child* *current-root*)))
-      (fill-frame-up *current-child* father)
-      (fill-frame-down *current-child* father))))
-
-(defun current-frame-fill-horizontal ()
-  "Fill the current frame horizontally"
-  (with-movement
-    (let ((father (find-father-frame *current-child* *current-root*)))
-      (fill-frame-left *current-child* father)
-      (fill-frame-right *current-child* father))))
-    
-
-;;; Resize
-(defun current-frame-resize-up ()
-  "Resize the current frame up to its half height"
-  (with-movement (resize-half-height-up *current-child*)))
-
-(defun current-frame-resize-down ()
-  "Resize the current frame down to its half height"
-  (with-movement (resize-half-height-down *current-child*)))
-
-(defun current-frame-resize-left ()
-  "Resize the current frame left to its half width"
-  (with-movement (resize-half-width-left *current-child*)))
-
-(defun current-frame-resize-right ()
-  "Resize the current frame right to its half width"
-  (with-movement (resize-half-width-right *current-child*)))
-
-(defun current-frame-resize-all-dir ()
-  "Resize down the current frame"
-  (with-movement (resize-frame-down *current-child*)))
-
-(defun current-frame-resize-all-dir-minimal ()
-  "Resize down the current frame to its minimal size"
-  (with-movement (resize-minimal-frame *current-child*)))
-
-
-
-
 (defun frame-layout-menu ()
   "< Frame layout menu >"
   (info-mode-menu (keys-from-list *layout-list*)))
